--- a/locale/ru/LC_MESSAGES/nvda.po
+++ b/locale/ru/LC_MESSAGES/nvda.po
@@ -1,146 +1,169 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Duplicate Gestures\n"
+"Project-Id-Version: gestureDuplicate 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-05 12:00+0700\n"
-"PO-Revision-Date: 2026-01-05 17:09+0700\n"
-"Last-Translator: \n"
-"Language-Team: Russian <ru@li.org>\n"
+"POT-Creation-Date: 2026-02-06 12:00+0700\n"
+"PO-Revision-Date: 2026-02-06 12:41+0700\n"
+"Last-Translator: Chai Chaimee <chai@example.com>\n"
+"Language-Team: Russian\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Poedit 3.7\n"
 
-#: __init__.py:28
+#: __init__.py:~60
 msgid "&Check Duplicate Gestures"
-msgstr "&????????? ????????????? ?????"
+msgstr "&Проверить дублирующиеся жесты"
 
-#: __init__.py:31
+#: __init__.py:~63
 msgid "&My Gestures Management"
-msgstr "&?????????? ????? ???????"
+msgstr "&Управление моими жестами"
 
-#: __init__.py:44
+#: __init__.py:~120
 msgid "Check for duplicate input gestures (single tap), My Gestures Management (double tap)"
-msgstr "????????? ????????????? ????? ????? (???? ???????), ?????????? ????? ??????? (??????? ???????)"
+msgstr "Проверить дублирующиеся жесты ввода (одно нажатие), Управление моими жестами (двойное нажатие)"
 
-#: __init__.py:58
-msgid "My Gestures Management (single tap), Check Duplicate Gestures (double tap)"
-msgstr "?????????? ????? ??????? (???? ???????), ????????? ????????????? ????? (??????? ???????)"
-
-#: CheckDuplicateGestures.py:41
+#: CheckDuplicateGestures.py:~80
 msgid "Duplicate Gestures"
-msgstr "????????????? ?????"
+msgstr "Дублирующиеся жесты"
 
-#: CheckDuplicateGestures.py:47
+#: CheckDuplicateGestures.py:~110
+msgid "Unknown context"
+msgstr "Неизвестно"
+
+#: CheckDuplicateGestures.py:~113
+msgid "Application context: "
+msgstr "Приложение: "
+
+#: CheckDuplicateGestures.py:~135
 msgid "Found {} duplicate entries. Select an item and click 'Open' to fix."
-msgstr "??????? {} ????????????? ???????. ???????? ??????? ? ??????? ????????? ??? ???????????."
+msgstr "Найдено {} дублирующихся записей. Выберите элемент и нажмите 'Открыть' для исправления."
 
-#: CheckDuplicateGestures.py:58 mygesturesManagement.py:70
-msgid "Gesture"
-msgstr "????"
+#: CheckDuplicateGestures.py:~140
+msgid "Gesture (column header)"
+msgstr "Жест"
 
-#: CheckDuplicateGestures.py:59 mygesturesManagement.py:71
-msgid "Function"
-msgstr "???????"
+#: CheckDuplicateGestures.py:~141
+msgid "Function (column header)"
+msgstr "Функция"
 
-#: CheckDuplicateGestures.py:60 mygesturesManagement.py:72
-msgid "Context"
-msgstr "????????"
+#: CheckDuplicateGestures.py:~142
+msgid "Context (column header)"
+msgstr "Контекст"
 
-#: CheckDuplicateGestures.py:67
+#: CheckDuplicateGestures.py:~148
 msgid "&Open Input Gestures"
-msgstr "&??????? ????? ?????"
+msgstr "&Открыть жесты ввода"
 
-#: CheckDuplicateGestures.py:69 mygesturesManagement.py:83
-msgid "&Close"
-msgstr "&???????"
+#: CheckDuplicateGestures.py:~150
+msgid "&Close (Duplicate Dialog)"
+msgstr "&Закрыть"
 
-#: CheckDuplicateGestures.py:119
-msgid "Unknown"
-msgstr "??????????"
-
-#: CheckDuplicateGestures.py:123
-msgid "Application: "
-msgstr "??????????: "
-
-#: CheckDuplicateGestures.py:170
+#: CheckDuplicateGestures.py:~240
 msgid "Input gestures dialog opened. Navigate with arrow keys to see Add and Remove buttons."
-msgstr "?????? ?????? ????? ??????. ??????????? ??????? ?? ?????????, ????? ??????? ?????? ?????????? ? ?????????."
+msgstr "Диалог жестов ввода открыт. Перемещайтесь стрелками, чтобы увидеть кнопки Добавить и Удалить."
 
-#: CheckDuplicateGestures.py:176
+#: CheckDuplicateGestures.py:~250
 msgid "Failed to open Input Gestures dialog"
-msgstr "?? ??????? ??????? ?????? ?????? ?????"
+msgstr "Не удалось открыть диалог жестов ввода"
 
-#: mygesturesManagement.py:38
+#: mygesturesManagement.py:~50
 msgid "My Gestures Management"
-msgstr "?????????? ????? ???????"
+msgstr "Управление моими жестами"
 
-#: mygesturesManagement.py:50
+#: mygesturesManagement.py:~110
 msgid "Clean up gestures for uninstalled addons from gestures.ini:"
-msgstr "???????? ????? ?? ????????? ?????????? ? ????? gestures.ini:"
+msgstr "Очистить жесты от удалённых дополнений из gestures.ini:"
 
-#: mygesturesManagement.py:56
+#: mygesturesManagement.py:~120
 msgid "Addon name:"
-msgstr "???????? ??????????:"
+msgstr "Имя дополнения:"
 
-#: mygesturesManagement.py:79
+#: mygesturesManagement.py:~130
+msgid "All addons (filter)"
+msgstr "Все дополнения"
+
+#: mygesturesManagement.py:~140
+msgid "Gesture (management column)"
+msgstr "Жест"
+
+#: mygesturesManagement.py:~141
+msgid "Function (management column)"
+msgstr "Функция"
+
+#: mygesturesManagement.py:~142
+msgid "Context (management column)"
+msgstr "Контекст"
+
+#: mygesturesManagement.py:~150
 msgid "&Remove addon"
-msgstr "&??????? ??????????"
+msgstr "&Удалить дополнение"
 
-#: mygesturesManagement.py:81
+#: mygesturesManagement.py:~152
 msgid "C&lear All"
-msgstr "&???????? ???"
+msgstr "&Очистить всё"
 
-#: mygesturesManagement.py:202
+#: mygesturesManagement.py:~154
+msgid "&Close (Management Dialog)"
+msgstr "&Закрыть"
+
+#: mygesturesManagement.py:~300
 msgid "&Remove Selected"
-msgstr "&??????? ?????????"
+msgstr "&Удалить выбранное"
 
-#: mygesturesManagement.py:247
+#: mygesturesManagement.py:~320
+msgid "No addon gestures to clear."
+msgstr "Нет жестов дополнений для очистки."
+
+#: mygesturesManagement.py:~330
+msgid "Remove all {} custom gestures from {} addons?"
+msgstr "Удалить все {} пользовательских жестов из {} дополнений?"
+
+#: mygesturesManagement.py:~340
+msgid "Confirm removal"
+msgstr "Подтвердить удаление"
+
+#: mygesturesManagement.py:~350
+msgid "Operation successful"
+msgstr "Успешно"
+
+#: mygesturesManagement.py:~360
+msgid "Failed to clear gestures from configuration."
+msgstr "Не удалось очистить жесты из конфигурации."
+
+#: mygesturesManagement.py:~370
+msgid "Error during mass deletion."
+msgstr "Ошибка при массовом удалении."
+
+#: mygesturesManagement.py:~400
 msgid ""
 "Remove this custom gesture for addon '{}'?\n"
 "\n"
 "Gesture: {}\n"
 "Function: {}"
 msgstr ""
-"??????? ???? ???????????????? ???? ??? ?????????? '{}'?\n"
+"Удалить этот пользовательский жест для дополнения '{}'?\n"
 "\n"
-"????: {}\n"
-"???????: {}"
+"Жест: {}\n"
+"Функция: {}"
 
-#: mygesturesManagement.py:249 mygesturesManagement.py:312
-msgid "Confirm"
-msgstr "???????????"
-
-#: mygesturesManagement.py:261 mygesturesManagement.py:330
-msgid "Success"
-msgstr "???????"
-
-#: mygesturesManagement.py:265
+#: mygesturesManagement.py:~420
 msgid "Failed to remove gesture from configuration."
-msgstr "?? ??????? ??????? ???? ?? ????????????."
+msgstr "Не удалось удалить жест из конфигурации."
 
-#: mygesturesManagement.py:268
+#: mygesturesManagement.py:~425
 msgid "Failed to remove gesture."
-msgstr "?? ??????? ??????? ????."
+msgstr "Не удалось удалить жест."
 
-#: mygesturesManagement.py:293
+#: mygesturesManagement.py:~450
 msgid "Remove all {} custom gestures for addon '{}'?"
-msgstr "??????? ??? {} ???????????????? ?????? ??? ?????????? '{}'?"
+msgstr "Удалить все {} пользовательских жестов для дополнения '{}'?"
 
-#: mygesturesManagement.py:309
-msgid "Remove all {} custom gestures from {} addons?"
-msgstr "??????? ??? {} ???????????????? ?????? ?? {} ???????????"
+#: mygesturesManagement.py:~470
+msgid "Failed to remove addon from configuration."
+msgstr "Не удалось удалить дополнение из конфигурации."
 
-#: mygesturesManagement.py:324
-msgid "No addon gestures to clear."
-msgstr "??? ?????? ?????????? ??? ???????."
-
-#: mygesturesManagement.py:334
-msgid "Failed to clear gestures from configuration."
-msgstr "?? ??????? ???????? ????? ?? ????????????."
-
-#: mygesturesManagement.py:337
-msgid "Error during mass deletion."
-msgstr "?????? ??? ???????? ????????."
+#: mygesturesManagement.py:~475
+msgid "Error during addon gesture removal."
+msgstr "Ошибка при удалении жестов дополнения."
