--- a/locale/fr/LC_MESSAGES/nvda.po
+++ b/locale/fr/LC_MESSAGES/nvda.po
@@ -1,103 +1,142 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Duplicate Gestures &\n"
+"Project-Id-Version: gestureDuplicate 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-05 12:00+0700\n"
-"PO-Revision-Date: 2026-01-05 17:08+0700\n"
-"Last-Translator: \n"
-"Language-Team: French <fr@li.org>\n"
+"POT-Creation-Date: 2026-02-06 12:00+0700\n"
+"PO-Revision-Date: 2026-02-06 12:40+0700\n"
+"Last-Translator: Chai Chaimee <chai@example.com>\n"
+"Language-Team: French\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Poedit 3.7\n"
 
-#: __init__.py:28
+#: __init__.py:~60
 msgid "&Check Duplicate Gestures"
-msgstr "&Vérifier les gestes en double"
+msgstr "&Vérifier les gestes dupliqués"
 
-#: __init__.py:31
+#: __init__.py:~63
 msgid "&My Gestures Management"
 msgstr "&Gestion de mes gestes"
 
-#: __init__.py:44
+#: __init__.py:~120
 msgid "Check for duplicate input gestures (single tap), My Gestures Management (double tap)"
-msgstr "Vérifier les gestes d'entrée en double (simple appui), Gestion de mes gestes (double appui)"
+msgstr "Vérifier les gestes d'entrée dupliqués (appui simple), Gestion de mes gestes (appui double)"
 
-#: __init__.py:58
-msgid "My Gestures Management (single tap), Check Duplicate Gestures (double tap)"
-msgstr "Gestion de mes gestes (simple appui), Vérifier les gestes en double (double appui)"
-
-#: CheckDuplicateGestures.py:41
+#: CheckDuplicateGestures.py:~80
 msgid "Duplicate Gestures"
-msgstr "Gestes en double"
+msgstr "Gestes dupliqués"
 
-#: CheckDuplicateGestures.py:47
+#: CheckDuplicateGestures.py:~110
+msgid "Unknown context"
+msgstr "Inconnu"
+
+#: CheckDuplicateGestures.py:~113
+msgid "Application context: "
+msgstr "Application : "
+
+#: CheckDuplicateGestures.py:~135
 msgid "Found {} duplicate entries. Select an item and click 'Open' to fix."
-msgstr "{} entrées en double trouvées. Sélectionnez un élément et cliquez sur « Ouvrir » pour corriger."
+msgstr "{} entrées dupliquées trouvées. Sélectionnez un élément et cliquez sur 'Ouvrir' pour corriger."
 
-#: CheckDuplicateGestures.py:58 mygesturesManagement.py:70
-msgid "Gesture"
+#: CheckDuplicateGestures.py:~140
+msgid "Gesture (column header)"
 msgstr "Geste"
 
-#: CheckDuplicateGestures.py:59 mygesturesManagement.py:71
-msgid "Function"
+#: CheckDuplicateGestures.py:~141
+msgid "Function (column header)"
 msgstr "Fonction"
 
-#: CheckDuplicateGestures.py:60 mygesturesManagement.py:72
-msgid "Context"
+#: CheckDuplicateGestures.py:~142
+msgid "Context (column header)"
 msgstr "Contexte"
 
-#: CheckDuplicateGestures.py:67
+#: CheckDuplicateGestures.py:~148
 msgid "&Open Input Gestures"
 msgstr "&Ouvrir les gestes d'entrée"
 
-#: CheckDuplicateGestures.py:69 mygesturesManagement.py:83
-msgid "&Close"
+#: CheckDuplicateGestures.py:~150
+msgid "&Close (Duplicate Dialog)"
 msgstr "&Fermer"
 
-#: CheckDuplicateGestures.py:119
-msgid "Unknown"
-msgstr "Inconnu"
-
-#: CheckDuplicateGestures.py:123
-msgid "Application: "
-msgstr "Application : "
-
-#: CheckDuplicateGestures.py:170
+#: CheckDuplicateGestures.py:~240
 msgid "Input gestures dialog opened. Navigate with arrow keys to see Add and Remove buttons."
-msgstr "Dialogue des gestes d'entrée ouvert. Naviguez avec les flèches pour voir les boutons Ajouter et Supprimer."
+msgstr "Boîte de dialogue des gestes d'entrée ouverte. Naviguez avec les flèches pour voir les boutons Ajouter et Supprimer."
 
-#: CheckDuplicateGestures.py:176
+#: CheckDuplicateGestures.py:~250
 msgid "Failed to open Input Gestures dialog"
-msgstr "Échec de l'ouverture du dialogue des gestes d'entrée"
+msgstr "Échec de l'ouverture de la boîte de dialogue des gestes d'entrée"
 
-#: mygesturesManagement.py:38
+#: mygesturesManagement.py:~50
 msgid "My Gestures Management"
 msgstr "Gestion de mes gestes"
 
-#: mygesturesManagement.py:50
+#: mygesturesManagement.py:~110
 msgid "Clean up gestures for uninstalled addons from gestures.ini:"
-msgstr "Nettoyer les gestes des extensions désinstallées dans gestures.ini :"
+msgstr "Nettoyer les gestes des extensions désinstallées depuis gestures.ini :"
 
-#: mygesturesManagement.py:56
+#: mygesturesManagement.py:~120
 msgid "Addon name:"
 msgstr "Nom de l'extension :"
 
-#: mygesturesManagement.py:79
+#: mygesturesManagement.py:~130
+msgid "All addons (filter)"
+msgstr "Toutes les extensions"
+
+#: mygesturesManagement.py:~140
+msgid "Gesture (management column)"
+msgstr "Geste"
+
+#: mygesturesManagement.py:~141
+msgid "Function (management column)"
+msgstr "Fonction"
+
+#: mygesturesManagement.py:~142
+msgid "Context (management column)"
+msgstr "Contexte"
+
+#: mygesturesManagement.py:~150
 msgid "&Remove addon"
 msgstr "&Supprimer l'extension"
 
-#: mygesturesManagement.py:81
+#: mygesturesManagement.py:~152
 msgid "C&lear All"
 msgstr "&Tout effacer"
 
-#: mygesturesManagement.py:202
+#: mygesturesManagement.py:~154
+msgid "&Close (Management Dialog)"
+msgstr "&Fermer"
+
+#: mygesturesManagement.py:~300
 msgid "&Remove Selected"
 msgstr "&Supprimer la sélection"
 
-#: mygesturesManagement.py:247
+#: mygesturesManagement.py:~320
+msgid "No addon gestures to clear."
+msgstr "Aucun geste d'extension à effacer."
+
+#: mygesturesManagement.py:~330
+msgid "Remove all {} custom gestures from {} addons?"
+msgstr "Supprimer tous les {} gestes personnalisés de {} extensions ?"
+
+#: mygesturesManagement.py:~340
+msgid "Confirm removal"
+msgstr "Confirmer la suppression"
+
+#: mygesturesManagement.py:~350
+msgid "Operation successful"
+msgstr "Succès"
+
+#: mygesturesManagement.py:~360
+msgid "Failed to clear gestures from configuration."
+msgstr "Échec du nettoyage des gestes de la configuration."
+
+#: mygesturesManagement.py:~370
+msgid "Error during mass deletion."
+msgstr "Erreur lors de la suppression massive."
+
+#: mygesturesManagement.py:~400
 msgid ""
 "Remove this custom gesture for addon '{}'?\n"
 "\n"
@@ -109,38 +148,22 @@ msgstr ""
 "Geste : {}\n"
 "Fonction : {}"
 
-#: mygesturesManagement.py:249 mygesturesManagement.py:312
-msgid "Confirm"
-msgstr "Confirmer"
-
-#: mygesturesManagement.py:261 mygesturesManagement.py:330
-msgid "Success"
-msgstr "Succès"
-
-#: mygesturesManagement.py:265
+#: mygesturesManagement.py:~420
 msgid "Failed to remove gesture from configuration."
 msgstr "Échec de la suppression du geste de la configuration."
 
-#: mygesturesManagement.py:268
+#: mygesturesManagement.py:~425
 msgid "Failed to remove gesture."
 msgstr "Échec de la suppression du geste."
 
-#: mygesturesManagement.py:293
+#: mygesturesManagement.py:~450
 msgid "Remove all {} custom gestures for addon '{}'?"
-msgstr "Supprimer les {} gestes personnalisés de l'extension '{}' ?"
+msgstr "Supprimer tous les {} gestes personnalisés pour l'extension '{}' ?"
 
-#: mygesturesManagement.py:309
-msgid "Remove all {} custom gestures from {} addons?"
-msgstr "Supprimer les {} gestes personnalisés de {} extensions ?"
+#: mygesturesManagement.py:~470
+msgid "Failed to remove addon from configuration."
+msgstr "Échec de la suppression de l'extension de la configuration."
 
-#: mygesturesManagement.py:324
-msgid "No addon gestures to clear."
-msgstr "Aucun geste d'extension à effacer."
-
-#: mygesturesManagement.py:334
-msgid "Failed to clear gestures from configuration."
-msgstr "Échec du nettoyage des gestes dans la configuration."
-
-#: mygesturesManagement.py:337
-msgid "Error during mass deletion."
-msgstr "Erreur lors de la suppression massive."
+#: mygesturesManagement.py:~475
+msgid "Error during addon gesture removal."
+msgstr "Erreur lors de la suppression des gestes de l'extension."
